# corge-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli.rs  command.rs  command_line_arguments.rs  compiler.rs  config.rs  dependency_management.rs  extension.rs  main.rs  model.rs  package_manager.rs  stage.rs  std_command_ext.rs  tool.rs  tools.rs
src/command/: build.rs  clean.rs  init.rs  run.rs
src/dependency_management/: fs_repository.rs  git_repository.rs
src/lib/: cli.rs  command.rs  config.rs  extension_manager.rs  lib.rs  tool.rs
src/lib/command/: build.rs  clean.rs  clone.rs  compilation_database.rs  init.rs  run.rs
src/lib/command/compilation_database/: compilation_database_path.rs
src/lib/tool/: compiler.rs  configuration_parser.rs  dependency_include_fetcher.rs  dir_copier.rs  files_fetcher.rs  linker.rs
src/lib/tool/dependency_source_fetcher/: fs_registry.rs  git_registry.rs
src/package_manager/: fs_repository.rs  git_repository.rs
src/stage/: dependencies_builder.rs  dependency_include_fetcher.rs  dependency_source_fetcher.rs  fetch_dependencies.rs  parse_configuration.rs  resolve_dependencies.rs
src/stage/dependency_source_fetcher/: fetch_dependency.rs
src/stage/dependency_source_fetcher/fetch_dependency/: fs_repository.rs
src/tool/: compiler.rs  configuration_parser.rs  dependencies_compiler.rs  dependency_include_fetcher.rs  dependency_source_fetcher.rs  files_fetcher.rs  linker.rs
src/tool/dependency_source_fetcher/: fs_registry.rs  git_repository.rs
src/tools/: compiler.rs  dependency_manager.rs  manifest_manager.rs  package_manager.rs  source_manager.rs
src/tools/command/: build.rs  clean.rs  init.rs
src/tools/dependency_manager/: fs_repository.rs  git_repository.rs
src/tools/package_manager/: fs_repository.rs  git_repository.rs
