[package]
name = "corge-rs" # c + forge
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "corge"
path = "src/lib/lib.rs"

[[bin]]
name = "corge-rs"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.132"
shell-words = "1.1.0"
target-lexicon = "0.13.3"
sha2 = "0.11.0-rc.2"
log = { version = "0.4.28", features = ["kv"] }
anyhow = "1.0.100"
simple_logger = "5.0.0"
