[package]
name = "corge-rs" # c + forge
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small Rust-powered build tool for C projects: init, build, deps, profiles, and tooling."
readme = "README.md"
keywords = ["c", "build", "cli", "gcc", "toolchain"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/corge-rs"
rust-version = "1.85"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
name = "corge"
path = "src/lib/lib.rs"

[[bin]]
name = "corge-rs"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.132"
target-lexicon = "0.13.3"
sha2 = "0.11.0-rc.2"
log = { version = "0.4.28", features = ["kv"] }
anyhow = "1.0.100"
simple_logger = "5.0.0"
